--- a/researchresources.html
+++ b/researchresources.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Home Page</title>
+  <title>researchresources</title>
 </head>
 <body>
-  <h1>Welcome to my website!</h1>
+  <h1>Research Resourses on Egalitarianism</h1>
   <nav>
     <a href="index.html">Home</a> |
     <a href="about.html">About</a>
